# auto_check_list_web

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROD_SETUP.md  README.md  audit.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
api/: api_app.py
api/handlers/: check_list.py  order_error.py
api/schemas/: check_list_colback.py
api/wrappers/: naumen.py  redash.py
check_list/: admin.py  models.py  pydantic_models.py  settings.py  tasks.py
check_list/migrations/: 0001_initial.py  0002_remove_checklistitem_scheduled_time_and_more.py  0003_add_missing_fields_and_checkevents.py  0004_alter_checkevents_uuid_alter_dashboard_id_and_more.py  0005_alter_checklistitem_description.py  0006_remove_checkevents_problem_checkevents_no_problem_and_more.py  0007_dashtype_checkevents_dash_type.py  0008_alter_checklistitem_crontab_and_more.py  0009_alter_checklistitem_start_at.py  0010_alter_checklistitem_start_at.py  0011_alter_checklistitem_start_at.py  0012_alter_checklistitem_start_at.py  0013_alter_checklistitem_start_at.py  0014_alter_checklistitem_start_at.py  0015_alter_checklistitem_start_at.py  0016_alter_checklistitem_start_at.py  0017_alter_checklistitem_start_at.py  0018_alter_checklistitem_start_at.py  0019_alter_checklistitem_start_at.py  (+21 more)
config/: celery.py  settings.py  urls.py
lighthouse/: admin.py  models.py  runner.py  tasks.py
order_errors/: admin.py  apps.py  models.py  redash_naumen_sync.py  tasks.py
redash/: admin.py  models.py  tasks.py
scripts/: create_superuser_if_missing.py
utils/: clean.py
(+57 files in other folders)
